<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="85dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/house"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspectisafe2"
        android:textColor="@color/md_theme_onBackground"
        android:textSize="20sp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:text="" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:scaleType="fitCenter" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="28dp"
                    android:elevation="1dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:stateListAnimator="@null"
                    android:text="@string/login"
                    android:textSize="16sp"
                    app:cornerRadius="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/registerButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="56dp"-->
<!--        android:layout_marginHorizontal="16dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:elevation="1dp"-->
<!--        android:fontFamily="@font/ubuntu_bold"-->
<!--        android:stateListAnimator="@null"-->
<!--        android:text="@string/register"-->
<!--        android:textSize="16sp"-->
<!--        app:cornerRadius="9dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/loginCardView" />-->

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:clickable="true"
            android:elevation="1dp"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#0000FF"
            android:textSize="16sp"
            app:cornerRadius="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView" />


</androidx.constraintlayout.widget.ConstraintLayout>
